discussion/kv_engine/179372/179372_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53531: Make KVBucket::ckptDestroyerTasks folly::Synchronized<T>

In preparation for making checkpoint_destruction_tasks dynamic in EP
config.

Change-Id: I80ce6bd8780034c9802c723460264d3a6bedc4e0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-08-31 13:31:12.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-08-31 13:35:13.000000000
Message: 
Patch Set 7: Code-Review-1

(1 comment)
Line:1097, engines/ep/src/kv_bucket.h -> Might be worth a brief addition to this comment explaining the motivation
for folly::Synchronised (i.e. dynamic resize)

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 13:54:35.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19884/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2992:12: error: non-const lvalue reference to type "CheckpointDestroyerTask" cannot bind to a temporary of type "CheckpointDestroyerTask" [clang-diagnostic-error]
    return ckptDestroyerTasks.withRLock([vbid](const auto& tasks) {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2994:16: error: call to implicitly-deleted copy constructor of "CheckpointDestroyerTask" [clang-diagnostic-error]
        return *tasks.at(vbid.get() % tasks.size());
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/Synchronized.h:317:12: note: in instantiation of function template specialization "KVBucket::getCkptDestroyerTask(Vbid)::(anonymous class)::operator()<std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > > >" requested here
    return function(*rlock());
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2992:31: note: in instantiation of function template specialization "folly::SynchronizedBase<folly::Synchronized<std::vector<std::shared_ptr<CheckpointDestroyerTask>, std::allocator<std::shared_ptr<CheckpointDestroyerTask> > >, folly::SharedMutexImpl<false> >, folly::detail::SynchronizedMutexLevel::Shared>::withRLock<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2992:41)>" requested here
    return ckptDestroyerTasks.withRLock([vbid](const auto& tasks) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_remover.h:26:33: note: copy constructor of "CheckpointDestroyerTask" is implicitly deleted because base class "GlobalTask" has a deleted copy constructor
class CheckpointDestroyerTask : public GlobalTask {
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/globaltask.h:285:31: note: copy constructor of "GlobalTask" is implicitly deleted because field "state" has a deleted copy constructor
    std::atomic<task_state_t> state;
                              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/atomic:204:7: note: "atomic" has been explicitly marked deleted here
      atomic(const atomic&) = delete;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19884/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2992:12:
error: non-const lvalue reference to type "CheckpointDestroyerTask" cannot bind to a temporary of type "CheckpointDestroyerTask" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19884/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48818/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kv_bucket.cc(2994): error C2280: "CheckpointDestroyerTask::CheckpointDestroyerTask(const CheckpointDestroyerTask &)": attempting to reference a deleted function ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48818/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41043/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:2994:16:
error: call to implicitly-deleted copy constructor of "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41043/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22930/ : FAILURE

Compile error at [2022-08-31T13:51:57.782Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:2994:16:
error: call to implicitly-deleted copy constructor of "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22930/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30219/ : FAILURE

Compile error at [2022-08-31T13:53:22.912Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kv_bucket.cc:2994:16:
error: call to implicitly-deleted copy constructor of "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30219/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21131/ : FAILURE

Compile error at [2022-08-31T13:50:02.364Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kv_bucket.cc:2994:16:
error: call to implicitly-deleted copy constructor of "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21131/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9580/ : FAILURE

Compile error at [2022-08-31T13:48:10.504Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kv_bucket.cc:2994:16:
error: call to implicitly-deleted copy constructor of "CheckpointDestroyerTask"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9580/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9679/ : FAILURE

Compile error at [2022-08-31T13:41:46.790Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kv_bucket.cc:2994:51:
error: use of deleted function ?CheckpointDestroyerTask::CheckpointDestroyerTask(const CheckpointDestroyerTask&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21838/ : FAILURE

Compile error at [2022-08-31T13:51:29.958Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:2994:51:
error: use of deleted function ?CheckpointDestroyerTask::CheckpointDestroyerTask(const CheckpointDestroyerTask&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21838/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22190/ : FAILURE

Compile error at [2022-08-31T13:52:32.799Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:2994:51:
error: use of deleted function ?CheckpointDestroyerTask::CheckpointDestroyerTask(const CheckpointDestroyerTask&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22190/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19105/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-08-31 14:48:38.000000000
Message: 
Patch Set 7:

(2 comments)
Line:1097, engines/ep/src/kv_bucket.h -> Done

----------------------------------------------------------------------------------------------------------------------
